Fix track name in main window title incorrectly changing when editing tag info for another track. Thanks to Anton Gritsay <anton@angri.ru> for the patch

BUG: 220521